<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".LoginPage">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:src="@drawable/register"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/edtUserName"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:hint="@string/username"
        android:drawableStart="@drawable/ic_account_circle_24"
        android:layout_marginTop="30dp"
        android:background="@drawable/input"
        android:drawableLeft="@drawable/ic_account_circle_24" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:hint="@string/email"
        android:drawableStart="@drawable/ic_email"
        android:layout_marginTop="30dp"
        android:background="@drawable/input"
        android:drawableLeft="@drawable/ic_email" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:hint="@string/password"
        android:drawableStart="@drawable/ic_key_24"
        android:layout_marginTop="30dp"
        android:background="@drawable/input"
        android:drawableLeft="@drawable/ic_key_24" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textStyle="bold|italic"
        android:textColor="#4A6572"
        android:textSize="14dp"/>


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/login_btn"
        app:backgroundTint="#4A6572"
        android:text="@string/sign_up"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/have_an_account"/>

        <TextView
            android:id="@+id/txtsignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold|italic"
            android:text="@string/sign_in"/>



    </LinearLayout>


</LinearLayout>