<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".LoginPage">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="230dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:src="@drawable/undraw_personal_information_re_vw8a"/>

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:hint="@string/email"
        android:drawableStart="@drawable/ic_email"
        android:layout_marginTop="50dp"
        android:background="@drawable/input"
        android:drawableLeft="@drawable/ic_email" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:hint="@string/current_password"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:layout_marginTop="30dp"
        android:background="@drawable/input"
        android:drawableLeft="@drawable/ic_baseline_lock_24" />





    <Button
        android:id="@+id/btnUpdatePassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="45dp"
        android:background="@drawable/login_btn"
        app:backgroundTint="#4A6572"
        android:text="@string/update_password"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="Don't have an account?"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold|italic"
            android:text="Sign Up"/>



    </LinearLayout>


</LinearLayout>